--- a/CSS/style.css
+++ b/CSS/style.css
@@ -197,3 +197,44 @@ right: 0%;
 .roun{
     border:1px solid var(--color-round) !important ;
 }
+.who{
+    background-color: var(--bg-color);
+
+}
+.gth>div>img{
+    object-fit: cover;
+    background-size: cover;
+height: 400px !important;
+border-radius: 5%;
+}
+.btn1{
+    background-color:transparent;
+    color: white;
+    font-size: 15px;
+    font-weight: 300;
+    outline: none;
+    border: none ;
+    z-index: 111;
+    position: relative !important;
+}
+.s1{
+    
+    fill: white !important;
+}
+.under-hover{
+    position: absolute;
+    border-bottom: 1px solid var(--color1) !important;
+    bottom: 0px;
+    width: 10%;
+    height: 0%;
+    z-index: -1;
+    transition: 0.6s ease-in-out !important;
+}
+.btn1:hover .under-hover{
+    width: 100%;
+
+    height: 100%;
+ }
+ .klo{
+    border: 1px solid var(--color-black);
+ }
