--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body{
 /* MEDIA QUIRES */
 @media (max-width:992px) {
     .float-en{
-        position: fixed;
+        position: absolute;
         right: 2%;
      
     }
@@ -27,7 +27,7 @@ body{
 }
 @media (max-width:576px) {
     .float-en{
-        position: fixed;
+        position: absolute;
         right: 2%;
      
     }
@@ -41,15 +41,14 @@ body{
 /* MEDIA QUIRES */
 
 .navbar{
-    top: 0%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    position: fixed !important;
+ 
 z-index: 1111;
-background-color:rgb(244, 244, 244);
+
 border-bottom: 1px solid #1818181e;
+transition: 1.2s ease-in-out !important;
 }
 .topbtnfix{
-    position: fixed;
+    position: absolute;
     bottom: 10px;
     right: 10px;
 }
@@ -82,9 +81,10 @@ border-bottom: 1px solid #1818181e;
 color: var(--color-black);
 }
 .btn-red{
-   
-    color: white !important;
-    background-color: var(--color1) !important;
+    border-radius: 50% !important;
+   border: 1px solid var(--color1) !important;
+    color: var(--color1) !important;
+    background-color: transparent !important;
 }
 /* .h100{
     height: 100vh ;
@@ -236,5 +236,18 @@ border-radius: 5%;
     height: 100%;
  }
  .klo{
+    background: rgb(25,23,23);
+background: linear-gradient(90deg, rgba(25,23,23,1) 1%, rgba(22,22,22,1) 58%);
     border: 1px solid var(--color-black);
+    border-radius: 10px;
  }
+
+ .navfix{
+    position: fixed !important;
+    top: 0% !important;
+    transition: 1.2s ease-in-out !important;
+    background-color:rgb(244, 244, 244);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+
+ }
+ 
