--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,9 +48,12 @@ border-bottom: 1px solid #1818181e;
 transition: 1.2s ease-in-out !important;
 }
 .topbtnfix{
-    position: absolute;
+    color: white;
+    padding: 10px;
+    position: fixed;
     bottom: 10px;
     right: 10px;
+    background-color: var(--color1) !important;
 }
 /* NAV-HOVER */
 .navhover{
@@ -114,6 +117,9 @@ color: var(--color-black);
         border-radius: 0% !important;
     padding: 5px !important;
     }
+}
+.offcanvas{
+    z-index: 1111 !important;
 }
 .banner-btn{
     position: relative;
@@ -251,3 +257,11 @@ background: linear-gradient(90deg, rgba(25,23,23,1) 1%, rgba(22,22,22,1) 58%);
 
  }
  
+#navunder{
+    width: 1px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+
+    border-bottom:2px solid var(--color1) ;
+}
