--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,13 @@ body {
 }
 
 /* MEDIA QUIRES */
+.sdsd{
+    display: block;
+}
 @media (max-width:992px) {
+    .sdsd{
+        display: none !important;
+    }
     .float-en {
         position: absolute;
         right: 2%;
@@ -138,15 +144,18 @@ font-size: 22px !important;
 }
 
 .btn-red {
+    position: fixed !important;
+    top: 2.5% !important;
+    right: 1%;
     border-radius: 50% !important;
     border: 1px solid var(--color1) !important;
     color: var(--color1) !important;
     background-color: transparent !important;
 }
 
-/* .h100{
+.h100{
     height: 100vh ;
-} */
+}
 .arr {
     fill: var(--color1) !important;
 }
@@ -253,21 +262,17 @@ font-size: 22px !important;
 .top-ani {
     height: 80px;
     width: 1px;
-
     position: fixed;
-    top: 20%;
     background-color: var(--color1);
-    animation: 5s linear infinite top;
-    animation-delay: 2s !important;
+    animation: 0.4s linear infinite top; /* Animation applied here */
 }
 
 @keyframes top {
     from {
-        top: 0%;
+        top: 0%; /* Start position */
     }
-
     to {
-        top: 100%;
+        top: 100%; /* End position */
     }
 }
 
@@ -414,3 +419,27 @@ font-size: 22px !important;
         /* At the end, opacity becomes 1 */
     }
 }
+.ser{
+    background-color: var(--bg-color);
+}
+.i1{
+    object-fit: cover;
+    background-size: cover;
+    border-radius: 120px 0 120px 0;}
+
+    .i2{
+border-radius: 150px 150px 250px 0;
+object-fit: cover;
+background-size: cover;
+    }
+    .i3{
+        object-fit: cover;
+background-size: cover;
+border-radius: 150px 150px 250px 0;
+    }
+    
+    .i4{
+        object-fit: cover;
+background-size: cover;
+border-radius: 120px 0 120px 0;
+    }
