--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,8 @@
 :root {
     --font-family: "Raleway", serif;
     --font-family-play: "Play", serif;
-    --color1: #a51f09;
+    /* --color1: #a51f09; */
+    --color1: #811f10;
 
     --color-black: #686868;
     --border-col: #1818182f;
@@ -64,7 +65,7 @@ body {
     top: 0%;
     height: 0%;
     width: 0%;
-    background-color: #474747 !important;
+    background-color:#811f10 !important;
     z-index: -1;
     border-radius: 20px;
     height: 100%;
@@ -123,14 +124,23 @@ body {
     border-bottom: 1px solid var(--border-col);
     transition: 1.2s ease-in-out !important;
 }
+#topbtn{
+    font-size: 24px !important;
+
+}
 
 .topbtnfix {
     color: white;
-    padding: 10px;
+    padding: 15px 10px !important;
     position: fixed;
     bottom: 10px;
+    width: 50px;
+    text-align: center !important;
     right: 10px;
-    background-color: var(--color1) !important;
+color: white !important;
+border-radius: 50%;
+    border: 1px solid var(--color1);
+    background-color:var(--color1) !important;
 }
 
 /* NAV-HOVER */
@@ -164,7 +174,9 @@ body {
     /* font-size: 34px !important; */
     color: var(--color-black);
 }
-
+.bg{
+    background-color: var(--color1) !important;
+}
 .btn-red {
     position: fixed !important;
     top: 2.5% !important;
@@ -429,7 +441,7 @@ body {
 
 .offcanvas-top {
     background-color: var(--bg-color) !important;
-    transition: 0.4s ease-in-out !important;
+    transition: 0.9s ease-in-out !important;
     height: 100vh !important;
     position: fixed;
     right: 0%;
@@ -533,11 +545,11 @@ footer {
     font-weight: normal;
 }
 
-.cardss1 {
+.cardss1 >div{
     z-index: 2 !important;
 
     position: relative !important;
-    transition: 0.8s ease-in-out !important;
+    transition: 0.9s ease-in-out !important;
 }
 
 .col-22 {
@@ -579,38 +591,40 @@ footer {
     border: 2px solid var(--border-col);
     background-color: white;
     position: relative;
-    z-index: 2 !important;
-    transition: 0.8s ease-in-out !important;
+z-index: 100 !important;
+
 
 }
 
 .set-btn:hover {
-    color: white !important;
+    color: var(--bg-color) !important;
 }
 
 .set-btn:hover .set-btn-hover {
     width: 100% !important;
+z-index: 200 !important;
     color: white !important;
 }
 .set-btn-hover>a>i{
     color: white !important;
 }
 .set-btn-hover {
-    transition: 0.8s ease-in-out !important;
+    z-index: 20 !important;
+    transition: 0.9s ease-in-out !important;
     top: 0%;
     left: 0%;
     height: 100%;
-    z-index: 4 !important;
+
     border-radius: 20px !important;
     width: 0%;
-    background-color: var(--bg-color) !important;
+    background-color:#811f10b0 !important;
     position: absolute !important;
 }
 
 .col-22 {
     margin: 0px;
     padding: 0px;
-    background-color: var(--bg-color);
+    background-color: var(--color1);
 }
 
 .paraa-1 {
@@ -619,3 +633,46 @@ footer {
     font-weight: 600;
     font-size: 15px !important;
 }
+
+.strk{
+transition: 1.6 ease-in-out !important;
+    color: var(--bg-color);
+    font-weight: 600 !important; 
+    font-size: 42px !important;
+    text-align: center;
+}
+@media (max-width:992px) {
+    .strk{
+        font-size:42px !important ;
+    }
+}
+#topbtn{
+
+    text-decoration: none !important;
+    font-size: 14px !important;
+    font-family: var(--font-family-play);
+}
+
+/*  */
+
+swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #b13636;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+/*  */
