--- a/CSS/style.css
+++ b/CSS/style.css
@@ -663,10 +663,8 @@ swiper-container {
   swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #b13636;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+
   }
 
   swiper-slide img {
@@ -675,4 +673,63 @@ swiper-container {
     height: 100%;
     object-fit: cover;
   }
+  swiper-slide:hover .slide-pos{
+height: 20%;
+transform: rotateX(0deg);
+
+  }
+  .slide-pos{
+    transform: rotateX(-90deg);
+    transition: 0.6s ease-in-out !important;
+ 
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    padding: 5px 0px !important;
+    width: 80%;
+   
+    height: 8%;
+    left: 10%;
+    position: absolute !important;
+    bottom: 10px !important;
+    color: white !important;
+    background-color: var(--color1) !important;
+  }
 /*  */
+
+.borders{
+    border: 1px solid white !important;
+}
+.btn3 {
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border: none !important;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    transition: 0.4s ease-in-out !important;
+    position: relative !important;
+  }
+  .btn3:hover .icon-hover {
+    transition: 0.4s ease-in-out !important;
+  
+    background-color: var(--color1) !important;
+    width: 100% !important;
+    height: 100% !important;
+    color: white !important;
+  }
+  .icon-hover {
+    color: transparent !important;
+    position: absolute !important;
+    width: 100%;
+    height: 0% !important;
+    bottom: 0%;
+    transition: 0.4s ease-in-out !important;
+    background-color: var(--color1);
+    font-size: 24px !important;
+    z-index: 111;
+    padding-top: 6px;
+    /* padding-top: 20px !important; */
+    left: 0px;
+    border: none !important;
+    /* padding-top: 12px; */
+  
+  }
+    
